test/scripts/local/envoy-gateway/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - namespace.yaml
  - envoyproxy.yaml
  - gatewayclass.yaml
  - gateway.yaml
helmCharts:
  - name: gateway-helm
    releaseName: envoy-gateway
    repo: oci://docker.io/envoyproxy
    version: v1.6.1
    namespace: envoy-gateway-system
    valuesFile: values.yaml
    includeCRDs: false
